<resources>
    <string name="app_name">Ayya Fashions</string>
    <string name="nama_lengkap_aya_yuhana">Nama Lengkap : Aya Yuhana</string>
    <string name="nim">NPM : 200602003</string>
    <string name="prodi">Prodi : Teknik Informatika</string>
    <string name="hobi">Hobi : Membaca dan Travelling</string>
    <string name="alamat_sumbawaa">Alamat : Sumbawa</string>
    <string name="bulan">TTL : Utan, 12 Desember 2001</string>
    <string name="gol">Golongan Darah : O</string>
    <string name="kembalii">Kembali</string>
    <string name="ayaa">Ayya Fashions</string>
    <string name="bajuu">Baju</string>
    <string name="celanaa">Celana</string>
    <string name="rokk">Rok</string>
    <string name="tekan_gambar_untuk_membuka_galerii">(Tekan gambar untuk membuka galeri)</string>
    <string name="biodata_dirii">Biodata Diri</string>
    <string name="sosial_mediaa">Sosial Media</string>
    <string name="jenis">Jenis Celana</string>
    <string name="jenis_celana">Jenis Celana</string>
    <string name="deskripsi_celana">Deskripsi Celana</string>
    <string name="follow_sosial_media_saya_di_bawah_ini">Follow Sosial Media Saya di Bawah Ini</string>
    <string name="sosial_meedia">Klik link untuk Follow isntagram saya <a href="https://instagram.com/aya.yuhana?">Instagram</a></string>
    <string name="daftar_jenis_pakaian">List of Clothing Types</string>
    <string name="bali">Bali</string>
    <string name="line">Rok Aline</string>
    <string name="sia">Indonesia</string>
    <string name="asal">Aslinya berasal dari Indonesia, dengan bahan yang halus+lembut dan dengan kancingnya</string>
    <string name="sudi">Rok Circle</string>
    <string name="pura">singapura</string>
    <string name="nyaman">Aslinya berasal dari singapura, dengan ciri hkas tali di bagian ikat pinggangnya dan nyaman di gunakan</string>
    <string name="ring">Rok Jaring</string>
    <string name="mi">Indonesia</string>
    <string name="ana">Aslinya berasal dari Indonesia, dengan bahan kain yang di gunakan bahan jaring dan di hiasi dengan bintik-bintik dan nyaman di gunakan</string>
    <string name="yu">Rok Maxi</string>
    <string name="as">Indonesia</string>
    <string name="ad">Aslinya berasal dari Indonesia, jenis rok yang panjangya hingga mencapai mata kaki</string>
    <string name="jk">Rok Mini</string>
    <string name="xc">Indonesia</string>
    <string name="cv">Aslinya berasal dari Indonesia,  jenis rok dengan batas jauh di atas lutut, umumnya 15 cm atau lebih</string>
    <string name="bn">Rok Tiered</string>
    <string name="ty">italia</string>
    <string name="d">\"Aslinya berasal dari Italia, jenis rok yang panjangnya sampai paha dan di hiasi dengan notif bunga \"</string>
    <string name="s">Baju Blous</string>
    <string name="f">Inggris</string>
    <string name="y">Aslinya berasal dari Inggris, dengan ciri khasnya memiliki renda di bagian kanan kiri lengan dan bahan yang halus</string>
    <string name="g">Baju Kaos</string>
    <string name="b">\"jerman \"</string>
    <string name="vb">Aslinya berasal dari jerman dengan bahan yang halus dan nyaman di pakai</string>
    <string name="yuk">Baju Kemeja Salur</string>
    <string name="awan">Indonesia</string>
    <string name="serta">Aslinya berasal dari Indonesia, dengan motif garis putih dan lengan baju yang pendek dan nyaman di gunakan</string>
    <string name="war">Baju Muslimah Anak</string>
    <string name="tyu">Inggris</string>
    <string name="nayi">Aslinya berasal dari Inggris, dengan bahan katun dan karet di bagian pergelangan tangan nyaman di gunakan</string>
    <string name="wer">Baju Remix</string>
    <string name="drt">Indonesia</string>
    <string name="ase">\"Aslinya berasal dari Indonesia, dengan bahan kain yang halus dan memiliki bagian tali di bagian depan baju \"</string>
    <string name="ikk">Baju Tunik</string>
    <string name="weu">Inggris</string>
    <string name="asert">Aslinya berasal dari Inggris, dengan ciri khas yang panjangnya mencapai hingga lutut kaki dan bahan yang nyanam di pakai untuk santai</string>
    <string name="qw">Celana Cargo cewek</string>
    <string name="yuik">Surabaya</string>
    <string name="cvb">Aslinya berasal dari Surabaya, dengan ciri khasnya memiliki kanrong di bagian samping</string>
    <string name="dfg">Celana Jeans cowok pendek</string>
    <string name="zx">Surbaya</string>
    <string name="ki">Aslinya berasal dari Surabaya, dengan ciri khas yang halus+lembut dengan bahan karet yang nyaman saat di gunakan</string>
    <string name="der">Celana Kulot</string>
    <string name="dert">Indonesia</string>
    <string name="lok">Aslinya berasal dari Indonesia, dengan ciri khas bahan yang tebal dan longgar nyaman untuk di gunakan</string>
    <string name="fe">Celana Pendek chinos</string>
    <string name="mika">malang</string>
    <string name="lika">Aslinya berasal dari malang, dengan ciri khas yang halus+lembut dengan bahan twill dan katun dengan ciri khas yang pendek</string>
    <string name="ning">Celana Training</string>
    <string name="bg">Surabaya</string>
    <string name="kil">Aslinya berasal dari Surabaya, celana yang di pakai untuk berolahraga</string>
    <string name="kol">Celana jeans</string>
    <string name="des">Surabaya</string>
    <string name="kill">Aslinya berasal dari Surabaya, dengan bahan yang di gunakan halus dan panjangnya mencapai mata kaki</string>
    <string name="asall">Asal</string>

</resources>