<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ayaa"
        android:textStyle="bold"
        android:layout_marginLeft="76dp"
        android:textColor="#09134A"
        android:textSize="29sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btn_buka_model_baju"
            android:padding="16dp"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp"
            android:src="@drawable/baju"
            android:scaleType="fitCenter" />
        <ImageButton
            android:id="@+id/btn_buka_model_celana"
            android:padding="16dp"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp"
            android:src="@drawable/jeans"
            android:scaleType="fitCenter" />
        <ImageButton
            android:id="@+id/btn_buka_model_rok"
            android:padding="16dp"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp"
            android:src="@drawable/rok"
            android:scaleType="fitCenter" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bajuu"
            android:textSize="18dp"
            android:layout_marginLeft="30dp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celanaa"
            android:textSize="18dp"
            android:layout_marginLeft="80dp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rokk"
            android:textSize="18dp"
            android:layout_marginLeft="66dp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tekan_gambar_untuk_membuka_galerii"
        android:textStyle="italic"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="32dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/biodata_btn"
            android:layout_width="155dp"
            android:layout_height="45dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/buttons"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/biodata_dirii"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/koleksi_btn"
            android:layout_width="155dp"
            android:layout_height="45dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/buttons"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/sosial_mediaa"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />


    </LinearLayout>



</LinearLayout>